--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "ProceduralArtModule"]
+[submodule "Assets/ProceduralArtModule"]
 	path = Assets/ProceduralArtModule
-	url = ./ProceduralArtModule
+	url = https://github.com/dlobser/ProceduralArtModule.git
